# tekst

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  parse.rs  state.rs  structs.rs
src/clients/: mod.rs  mpris.rs  spotify.rs
src/sources/: mod.rs  xmlyr.rs
