[package]
name = "tekst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
owo-colors = "3.3.0"
reqwest = "0.11.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
