[package]
name = "tekst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
dotenv = "0.15.0"
mpris = "1.1.2"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
rspotify = { version = "0.11.5", default-features = false, features = ["client-ureq", "ureq-rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
